# PetaWSRename-QR

./: .gitignore  PetaWSRename.spec  PetaWSRenameFix.spec  PetaWSRenameFix2.spec  Readme.md  main.py  main.spec  packages.txt  pyproject.toml  test-cv2.py
ui/: main.py  main.ui
