[project]
name = "petawsrename-qr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
    "et-xmlfile==1.1.0",
    "numpy==1.25.0",
    "opencv-python-headless==4.8.0.74",
    "openpyxl==3.1.2",
    "pandas==2.0.3",
    "pip==22.3.1",
    "pyqt5==5.15.9",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.12.1",
    "pytesseract>=0.3.13",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pyzbar==0.1.9",
    "setuptools==65.5.1",
    "six==1.16.0",
    "tzdata==2023.3",
    "wheel==0.38.4",
]
